--- a/app/src/main/res/layout-v17/join_event_dialog.xml
+++ b/app/src/main/res/layout-v17/join_event_dialog.xml
@@ -6,7 +6,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Join the Event"
+        android:text="@string/join_the_event"
         android:textColor="@color/black"
         android:padding="10dp"
         android:textSize="20sp"/>
@@ -24,7 +24,7 @@
             android:id="@+id/textView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="would you like to join: "
+            android:text="@string/would_you_like_to_join"
             android:padding="10dp"
             />
         <TextView
@@ -44,14 +44,14 @@
             android:id="@+id/textView8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="how are you connected? "
+            android:text="@string/how_are_you_connected"
             android:padding="10dp"
             />
         <EditText
             android:id="@+id/connectedView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:hint="Bride's friend..."
+            android:hint="@string/bride_s_friend"
             android:textColor="@color/black"
             android:padding="5dp"
             />
@@ -60,7 +60,7 @@
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="please note that you can only join one event. so you will be removed from previous events!"
+        android:text="@string/event_warning"
         android:padding="10dp"
         android:textColor="@color/black"/>
 <LinearLayout
@@ -72,7 +72,7 @@
         android:id="@+id/cancelView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="cancel"
+        android:text="@string/cancel"
         android:paddingEnd="15dp"
         android:textSize="15sp"
         android:textColor="@color/colorAccent"/>
@@ -80,7 +80,7 @@
         android:id="@+id/joinView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="join"
+        android:text="@string/join"
         android:paddingEnd="10dp"
         android:textSize="15sp"
         android:textColor="@color/colorAccent"/>
