--- a/app/src/main/res/layout-v17/activity_edit_prifile.xml
+++ b/app/src/main/res/layout-v17/activity_edit_prifile.xml
@@ -51,29 +51,39 @@
                     android:src="@drawable/image_rim"
                     android:layout_width="206dp"
                     android:layout_height="206dp"
-                    android:elevation="9dp"
+
                     android:layout_margin="5dp"
                     android:layout_centerInParent="true"
                     android:layout_centerVertical="true"
-                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     />
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/imageView"
-                        android:layout_width="156dp"
-                        android:layout_height="156dp"
-                        android:layout_margin="5dp"
-                        android:elevation="8dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/camera_icon"
-                        app:civ_border_color="@color/pink"
-                        app:civ_border_width="2dp"
-                        android:layout_centerInParent="true"
-                        android:layout_centerVertical="true"
-                       />
+                <de.hdodenhof.circleimageview.CircleImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="156dp"
+                    android:layout_height="156dp"
+                    android:layout_margin="5dp"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/camera_icon"
+                    app:civ_border_color="@color/pink"
+                    app:civ_border_width="2dp"
+                    android:layout_centerInParent="true"
+                    android:layout_centerVertical="true"
+                    />
+                <ProgressBar
+                    android:id="@+id/loadImageProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"/>
             </RelativeLayout>
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/click_on_the_image_to_change_it"
+                android:textColor="@android:color/white" />
         </LinearLayout>
 
         <ScrollView
@@ -111,10 +121,11 @@
                         android:id="@+id/nameText"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:hint="My name"
+                        android:hint="@string/my_name"
                         android:textColor="@color/white"
-                        android:textColorHint="@color/white"
-                        android:inputType="textPersonName"/>
+                        android:textColorHint="@color/whiteTransparent"
+                        android:inputType="textPersonName"
+                        android:ems="10"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -158,14 +169,14 @@
                             android:id="@+id/femaleRadio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Female"
+                            android:text="@string/female"
                             android:textColor="@color/white"
                             android:paddingEnd="5dp"/>
                         <RadioButton
                             android:id="@+id/maleRadio"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Male"
+                            android:text="@string/male"
                             android:textColor="@color/white"/>
                     </RadioGroup>
                 </LinearLayout>
@@ -225,7 +236,7 @@
                     android:layout_gravity="center"
                     android:layout_margin="15dp"
                     android:background="@drawable/trans_rectangle_white"
-                    android:text="update"
+                    android:text="@string/update"
                     android:textColor="@color/pink" />
             </LinearLayout>
         </ScrollView>
