--- a/app/src/main/res/layout-v17/person_card_layout.xml
+++ b/app/src/main/res/layout-v17/person_card_layout.xml
@@ -8,92 +8,88 @@
     android:background="?android:attr/selectableItemBackground"
 
   >
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="?android:attr/selectableItemBackground"
         >
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/imageView"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/camera_icon"
-            app:civ_border_color="@color/pink"
-            app:civ_border_width="2dp"
-            android:elevation="4dp"
-            android:layout_margin="5dp"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:orientation="horizontal"
-            android:layout_height="40dp"
-            android:layout_marginStart="-30dp"
-            android:layout_marginEnd="20dp"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="15dp"
             android:background="@drawable/trans_rectangle_light_purple"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:orientation="vertical"
-
-            android:layout_weight="1"
-            >
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:paddingStart="30dp"
-               >
-                <TextView
-                    android:id="@+id/myName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="My Name"
-                    android:layout_gravity="center"
-                    android:textColor="@color/black"
-                    />
-                <TextView
-                    android:id="@+id/myAge"
-                    android:paddingStart="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="45"
-                    android:layout_gravity="center"
-                    />
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="start"
-                android:paddingStart="30dp"
-                android:orientation="horizontal">
-                <TextView
+                android:orientation="vertical"
 
+                android:paddingStart="45dp"
+                android:layout_weight="1"
+                >
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="kashur:"
 
-                    android:layout_gravity="center"
-                    />
-                <TextView
-                    android:id="@+id/kashur"
-                    android:paddingStart="5dp"
+                    android:paddingStart="30dp"
+                    >
+                    <TextView
+                        android:id="@+id/myName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="My Name"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        />
+                    <TextView
+                        android:id="@+id/myAge"
+                        android:paddingStart="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="45"
+                        android:layout_gravity="center"
+                        />
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Brides friend"
-                    android:layout_gravity="center"
-                    />
+                    android:paddingStart="30dp"
+                    android:orientation="horizontal">
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/kashur"
+
+                        android:layout_gravity="center"
+                        />
+                    <TextView
+                        android:id="@+id/kashur"
+                        android:paddingStart="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Brides friend"
+                        android:layout_gravity="center"
+
+                        />
+                </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
             <ImageView
                 android:id="@+id/addToFavorite"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:src="@drawable/ic_favorite_checked"
                 android:layout_gravity="center"
-                android:layout_marginEnd="20dp"
+                android:layout_marginEnd="10dp"
+                android:autoMirrored="true"
+
                 />
             <ImageView
                 android:id="@+id/sendImage"
@@ -101,10 +97,30 @@
                 android:layout_height="30dp"
                 android:src="@drawable/ic_forward"
                 android:layout_marginEnd="10dp"
-                android:elevation="4dp"
                 android:layout_gravity="center"
-                android:background="?android:attr/selectableItemBackground"/>
+                android:background="?android:attr/selectableItemBackground"
+
+                />
         </LinearLayout>
-    </LinearLayout>
+        <RelativeLayout
+            android:layout_width="80dp"
+            android:layout_height="80dp">
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/imageView"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/camera_icon"
+                app:civ_border_color="@color/pink"
+                app:civ_border_width="2dp"
+                android:layout_margin="5dp"/>
+            <ProgressBar
+                android:id="@+id/loadImageProgress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                />
+        </RelativeLayout>
+    </RelativeLayout>
 
 </LinearLayout>
