--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -45,16 +45,21 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+        >
             <ImageView
                 android:src="@drawable/image_rim"
                 android:layout_width="206dp"
                 android:layout_height="206dp"
-                android:elevation="9dp"
                 android:layout_margin="5dp"
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
+
                 android:layout_alignParentTop="true"
                 />
             <de.hdodenhof.circleimageview.CircleImageView
@@ -62,17 +67,22 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="156dp"
                 android:layout_height="156dp"
                 android:layout_margin="5dp"
-                android:elevation="8dp"
                 android:scaleType="centerCrop"
                 android:src="@drawable/camera_icon"
                 app:civ_border_color="@color/pink"
                 app:civ_border_width="2dp"
-
                 android:layout_centerInParent="true"
                 android:layout_centerVertical="true"/>
-
         </RelativeLayout>
 
+        </RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/click_the_camera_icon_to_select_an_image"
+
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <ScrollView
@@ -112,8 +122,9 @@ xmlns:android="http://schemas.android.com/apk/res/android"
                     android:layout_height="wrap_content"
                     android:hint="@string/my_name"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white"
-                    android:inputType="textPersonName"/>
+                    android:textColorHint="@color/whiteTransparent"
+                    android:inputType="textPersonName"
+                    android:ems="10"/>
             </LinearLayout>
 
             <LinearLayout
