--- a/app/src/main/res/drawable/gradient_grey.xml
+++ b/app/src/main/res/drawable/gradient_grey.xml
@@ -1,9 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#CB3066"
+        android:startColor="#363636"
 
-        android:endColor="#16BFFD"
+        android:endColor="#7e7e7e"
         android:angle="90" />
 </shape>
