--- a/app/src/main/res/menu/event_manu.xml
+++ b/app/src/main/res/menu/event_manu.xml
@@ -16,4 +16,11 @@
         app:showAsAction="always">
 
     </item>
+    <item
+        android:id="@+id/contact"
+        android:icon="@drawable/ic_favorites_white"
+        android:orderInCategory="99"
+        android:title="@string/contact_us"
+        app:showAsAction="never">
+    </item>
 </menu>
