--- a/app/src/main/res/layout-v17/activity_edit_prifile.xml
+++ b/app/src/main/res/layout-v17/activity_edit_prifile.xml
@@ -76,7 +76,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"/>
+                    android:layout_centerVertical="true"
+                    android:visibility="gone"/>
             </RelativeLayout>
             <TextView
                 android:layout_width="wrap_content"
