--- a/app/src/main/res/menu/event_manu.xml
+++ b/app/src/main/res/menu/event_manu.xml
@@ -23,4 +23,11 @@
         android:title="@string/contact_us"
         app:showAsAction="never">
     </item>
+    <item
+        android:id="@+id/delete_account"
+        android:icon="@drawable/ic_favorites_white"
+        android:orderInCategory="99"
+        android:title="Delete account"
+        app:showAsAction="never">
+    </item>
 </menu>
